--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -2,124 +2,210 @@
 		controllerName="createsalesorder.controller.Object"
 		xmlns:mvc="sap.ui.core.mvc"
 		xmlns="sap.m"
+		xmlns:t="sap.ui.table"
+		xmlns:u="sap.ui.unified"
 		xmlns:f="sap.f"
 		xmlns:layout="sap.ui.layout"
-		xmlns:form="sap.ui.layout.form"
+		xmlns:core="sap.ui.core"
 		height="100%">
-		<f:DynamicPage id="dynamicPageId" headerExpanded="{/headerExpanded}" toggleHeaderOnTitleClick="{/titleClickable}">
+		<f:DynamicPage id="dynamicPageId">
 			<!-- DynamicPage Title -->
 			<f:title>
 				<f:DynamicPageTitle>
 					<f:heading>
-						<Title text="Create Sales Order"/>
+						<Toolbar>
+							<Button type="Back" press="onBack" />
+							<ToolbarSpacer/>
+							<Title text="New Sales Order"/>
+						</Toolbar>
 					</f:heading>
-					<f:content>
-						
-					</f:content>
-					
-					<f:navigationActions>
-						
-						<Button
-								icon="sap-icon://decline"
-								type="Transparent" />
-					</f:navigationActions>
 				</f:DynamicPageTitle>
 			</f:title>
-			<!-- DynamicPage Header -->
-			<f:header>
-				<f:DynamicPageHeader pinnable="true">
-					<form:SimpleForm id="SimpleFormToolbar"
-								editable="true"
-								layout="ResponsiveGridLayout"
-								labelSpanXL="4"
-								labelSpanL="3"
-								labelSpanM="4"
-								labelSpanS="12"
-								adjustLabelSpan="false"
-								emptySpanXL="0"
-								emptySpanL="4"
-								emptySpanM="0"
-								emptySpanS="0"
-								columnsXL="2"
-								columnsL="1"
-								columnsM="1"
-								singleContainerFullSize="false"
-								ariaLabelledBy="Title1" >
-						</form:SimpleForm>
-				</f:DynamicPageHeader>
+
+			<!-- DynamicPage Header-->  
+			<f:header>  
+				<!-- <f:DynamicPageHeader pinnable="true">
+				<Panel>
+					<Label text="Header" />
+					<FlexBox
+							alignItems="Start"
+							justifyContent="SpaceBetween">
+						<items>
+							<Panel
+									backgroundDesign="Transparent"
+									class="sapUiNoContentPadding">
+								<content>
+									<layout:HorizontalLayout
+											allowWrapping="true">
+										<layout:VerticalLayout
+												class="sapUiMediumMarginEnd">
+											<Label text="Sales Order Number" labelFor="sono" />
+											<Input
+												id="sono"
+												placeholder="xxx"
+												value="{viewModel>/create/sono}">
+											</Input>
+										</layout:VerticalLayout>
+										<layout:VerticalLayout class="sapUiMediumMarginEnd">
+										<Label text="Status" labelFor="sosta" />
+											<Input
+												id="sosta"
+												placeholder="yyy"
+												value="{viewModel>/create/sosta}">
+											</Input>
+										</layout:VerticalLayout>
+										<layout:VerticalLayout class="sapUiMediumMarginEnd">
+										<Label text="Customer Code" labelFor="cuscd" />
+											<Input
+												id="cuscd"
+												placeholder="yyy"
+												value="{viewModel>/create/cuscd}">
+											</Input>
+										</layout:VerticalLayout>
+										<layout:VerticalLayout class="sapUiMediumMarginEnd">
+										<Label text="zzz" labelFor="cuscd" />
+										<DatePicker
+											id="DTI1"
+											valueFormat="yyyy-MM-dd"
+											value="{viewModel>/create/cuscd}"/>
+										</layout:VerticalLayout>											
+									</layout:HorizontalLayout>
+								</content>
+							</Panel>
+							<Button
+							text="Create"
+							type="Emphasized"
+							press="onCreate"/>
+						</items>
+					</FlexBox>
+					</Panel>
+
+				</f:DynamicPageHeader> -->
 			</f:header>
+
 			<f:content>
-				<Table id="idProductsTable"
-						sticky="HeaderToolbar,ColumnHeaders"
-						inset="false"
-						items="{
-							path: '/ProductCollection',
-							sorter: {
-								path: 'Name'
-							}
-						}"
-					   class="sapFDynamicPageAlignContent"
-					   width="auto">
-					<headerToolbar>
-						<Toolbar>
-							<Title text="Products" level="H2"/>
-						</Toolbar>
-					</headerToolbar>
-					<columns>
-						<Column
-								width="12em">
-							<Text text="Product" />
-						</Column>
-						<Column
-								minScreenWidth="Tablet"
-								demandPopin="true">
-							<Text text="Supplier" />
-						</Column>
-						<Column
-								minScreenWidth="Tablet"
-								demandPopin="true"
-								hAlign="End">
-							<Text text="Dimensions" />
-						</Column>
-						<Column
-								hAlign="End">
-							<Text text="Price" />
-						</Column>
-					</columns>
-					<items>
-						<ColumnListItem>
-							<cells>
-								<ObjectIdentifier
-										title="{Name}"
-										text="{ProductId}"/>
-								<Text
-										text="{SupplierName}" />
-								<Text
-										text="{Width} x {Depth} x {Height} {DimUnit}" />
-								<ObjectNumber
-										number="{
-											parts:[{path:'Price'},{path:'CurrencyCode'}],
-											type: 'sap.ui.model.type.Currency',
-											formatOptions: {showMeasure: false}
-										}"
-										unit="{CurrencyCode}" />
-							</cells>
-						</ColumnListItem>
-					</items>
-				</Table>
+				<t:Table
+						id="createtable"
+						rows="{viewModel>/it_data}"
+						selectionMode="MultiToggle">
+					<t:extension>
+						<OverflowToolbar style="Clear">
+							<Title text="Product List"/>
+				    		<ToolbarSpacer/>
+								<Button
+								icon="sap-icon://add"
+								press="onAdd"/>
+								<Button
+								icon="sap-icon://less"
+								press="onDelete"/>
+								<!-- <Button
+								text="Edit"
+								press="onEdit"/> -->
+								<!-- <Button
+								text="Save"
+								press="onSave"/>
+								<Button
+								text="SelectedDelete"
+								press="onSelectedDelete"/> -->
+								<Button
+									text="Submit"
+									type="Emphasized"
+									press="onCreate"/>
+						</OverflowToolbar>
+					</t:extension>
+
+					<t:columns>
+						<t:Column >
+							<Label text="Product" />
+							<t:template>
+								<Input value="{viewModel>gdcd}" editable ="{viewModel>/editMode}"
+									showValueHelp="true" valueHelpOnly="true"
+									valueHelpRequest="onValueHelpRequested"
+									suggestionItems="{main>/ZshaProductSet}">
+									<core:Item key="{main>Gdcd}" text="{main>/Gdnm}"/>
+								</Input>
+									
+							</t:template>
+						</t:Column>
+						<t:Column >
+							<Label text="Description" />
+							<t:template>
+								<Input value="{viewModel>gdnm}" editable ="false"/>
+							</t:template>
+						</t:Column>
+						<!-- <t:Column width="11rem" hAlign="End">
+							<Label text="FLDATE" />
+							<t:template>
+								<DatePicker
+									id="DTI2"
+									valueFormat="yyyy-MM-dd"
+									value="{main>fldate}"
+									editable ="{main>/editMode}"/>
+							</t:template>
+						</t:Column> -->
+						<!-- <t:Column width="11rem">
+							<Label text="Price" />
+							<t:template>
+								<Input value="{
+									path: 'viewModel>gdpx'
+								}"
+								editable ="{main>/editMode}" /> -->
+								<!-- <u:Currency value="{main>price}" currency="{main>currency}"/> -->
+							<!--</t:template>
+						</t:Column> -->
+
+						<t:Column >
+							<Label text="Quentity(EA)" />
+							<t:template>
+								<Input value="{viewModel>socnt}" editable ="{viewModel>/editMode}"/>
+							</t:template>
+						</t:Column>
+						<!-- <t:Column >
+							<Label text="Unit of Measure" />
+							<t:template>
+								<Input value="{viewModel>meins}" editable ="false"/>
+							</t:template>
+						</t:Column> -->
+
+						<!-- <t:Column>
+							<Label text="Quentity" />
+							<t:template>
+								<Input value="{
+									path: 'viewModel>socnt'
+								}"
+								editable ="{viewModel>/editMode}" />
+								<u:Currency value="{viewModel>socnt}" currency="{viewModel>socnt}"/>
+							</t:template>
+						</t:Column>		 -->
+
+						<!-- <t:Column >
+							<Label text="Price" />
+							<t:template>
+								<Input value="{viewModel>gdpx}" editable ="false"/>
+							</t:template>
+						</t:Column>
+						<t:Column >
+							<Label text="Currency" />
+							<t:template>
+								<Input value="{viewModel>waers}" editable ="false"/>
+							</t:template>
+						</t:Column>		 -->
+						<!-- <t:Column>
+							<Label text="Price" />
+							<t:template>
+								<Input value="{
+									path: 'viewModel>gdpx'
+								}"
+								editable ="{viewModel>/editMode}" />
+								<u:Currency value="{viewModel>gdpx}" currency="{viewModel>waers}"/>
+							</t:template>
+						</t:Column>		 -->
+					</t:columns>
+				</t:Table>
 			</f:content>
 			<!-- DynamicPage Footer -->
 			<f:footer>
-				<OverflowToolbar>
-					<Button icon="sap-icon://message-popup"
-							text="{/messagesLength}"
-							type="Emphasized"
-							press="onMessageButtonPress"
-							visible="{= !!${/messagesLength}}"/>
-					<ToolbarSpacer/>
-					<Button type="Accept" text="Accept"/>
-					<Button type="Reject" text="Reject"/>
-				</OverflowToolbar>
+
 			</f:footer>
 		</f:DynamicPage>
 </mvc:View>
